crates/stef-doc/tests/snapshots/render__render@struct_generics.stef.snap
---
source: crates/stef-doc/tests/render.rs
description: "/// Generic key-value pair.\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}"
input_file: crates/stef-parser/tests/inputs/struct_generics.stef
---
--- struct_generics/index.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>struct_generics - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>Schema struct_generics</h2>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Modules</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Structs</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-struct" href="struct.KeyValue.html">KeyValue</a>
      </td>
      <td>
        <p>Generic key-value pair.</p>
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Enums</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Aliases</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Constants</h3>
  <table>
  </table>
</div>
    </main>
  </body>
</html>

--- struct_generics/struct.KeyValue.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>KeyValue - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Struct
    <a href="index.html">struct_generics</a>::<span class="name-struct">KeyValue</span>
  </h2>
  <pre class="item-definition my-2">struct KeyValue&lt;K, V&gt; {
    key: K @1,
    value: V @2,
}</pre>
  <div class="markdown pl-6">
    <p>Generic key-value pair.</p>
  </div>
</div>
<div class="section">
  <h3>Metadata</h3>
  <div class="pl-6 mt-2">
    <p>The next free ID is <code class="font-bold">3</code></p>
  </div>
</div>
<div class="section">
  <h3>Fields</h3>
  <ul>
    <li class="field-definition">
      <code>
        <span class="field-name">key</span>:
        <span class="field-type">K</span>
        <span class="field-id">@1</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">value</span>:
        <span class="field-type">V</span>
        <span class="field-id">@2</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
    </li>
  </ul>
</div>

    </main>
  </body>
</html>
