crates/stef-doc/tests/snapshots/render__render@struct_tuple.stef.snap
---
source: crates/stef-doc/tests/render.rs
description: "/// Basic struct.\nstruct Sample(u32 @1, bool @2)"
input_file: crates/stef-parser/tests/inputs/struct_tuple.stef
---
--- struct_tuple/index.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>struct_tuple - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>Schema struct_tuple</h2>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Modules</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Structs</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-struct" href="struct.Sample.html">Sample</a>
      </td>
      <td>
        <p>Basic struct.</p>
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Enums</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Aliases</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Constants</h3>
  <table>
  </table>
</div>
    </main>
  </body>
</html>

--- struct_tuple/struct.Sample.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>Sample - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Struct
    <a href="index.html">struct_tuple</a>::<span class="name-struct">Sample</span>
  </h2>
  <pre class="item-definition my-2">struct Sample(u32 @1, bool @2)</pre>
  <div class="markdown pl-6">
    <p>Basic struct.</p>
  </div>
</div>
<div class="section">
  <h3>Metadata</h3>
  <div class="pl-6 mt-2">
    <p>The next free ID is <code class="font-bold">3</code></p>
  </div>
</div>
<div class="section">
  <h3>Fields</h3>
  <ul>
    <li class="field-definition">
      <code>
        <span class="field-name">n0</span>:
        <span class="field-type">u32</span>
        <span class="field-id">@1</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>u32</strong> <code>1..5</code></p>
          </div>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">n1</span>:
        <span class="field-type">bool</span>
        <span class="field-id">@2</span>
      </code>
      <div class="markdown pl-4">
        
      </div>
      <div class="pl-4">
        <h4 class="my-2">Metadata</h4>
        <div class="text-sm">
          <p>The size range is:</p>
          <div
            class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
            <p><strong>bool</strong> <code>1</code></p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>

    </main>
  </body>
</html>
