crates/stef-doc/tests/snapshots/render__render@types_generic.stef.snap
---
source: crates/stef-doc/tests/render.rs
description: "struct Sample {\n    f1: vec<u32> @1,\n    f2: hash_map<u32, string> @2,\n    f3: hash_set<u32> @3,\n    f4: option<u32> @4,\n    f5: non_zero<u32> @5,\n}\n\nstruct SampleUnnamed(\n    vec<u32> @1,\n    hash_map<u32, string> @2,\n    hash_set<u32> @3,\n    option<u32> @4,\n    non_zero<u32> @5,\n)"
input_file: crates/stef-parser/tests/inputs/types_generic.stef
---
--- types_generic/index.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>types_generic - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>Schema types_generic</h2>
</div>
<div class="section">
  <h3>Modules</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Structs</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-struct" href="struct.Sample.html">Sample</a>
      </td>
      <td>
      </td>
    </tr>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-struct" href="struct.SampleUnnamed.html">SampleUnnamed</a>
      </td>
      <td>
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Enums</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Aliases</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Constants</h3>
  <table>
  </table>
</div>
    </main>
  </body>
</html>

--- types_generic/struct.Sample.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>Sample - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Struct
    <a href="index.html">types_generic</a>::<span class="name-struct">Sample</span>
  </h2>
  <pre class="item-definition my-2">struct Sample {
    f1: vec&lt;u32&gt; @1,
    f2: hash_map&lt;u32, string&gt; @2,
    f3: hash_set&lt;u32&gt; @3,
    f4: option&lt;u32&gt; @4,
    f5: non_zero&lt;u32&gt; @5,
}
</pre>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Metadata</h3>
  <div class="pl-6 mt-2">
    <p>The next free ID is <code class="font-bold">6</code></p>
  </div>
</div>
<div class="section">
  <h3>Fields</h3>
  <ul>
    <li class="field-definition">
      <code>
        <span class="field-name">f1</span>:
        <span class="field-type">vec&lt;u32&gt;</span>
        <span class="field-id">@1</span>
      </code>
      <div class="markdown pl-6">
        
      </div>
      <h4 class="my-2">Metadata</h4>
      <div class="text-sm">
        <p>The size range is:</p>
        <div
          class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
          <p><strong>vec</strong> <code>1..</code></p>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>element: <strong>u32</strong> <code>1..5</code></li>
          </ul>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f2</span>:
        <span class="field-type">hash_map&lt;u32, string&gt;</span>
        <span class="field-id">@2</span>
      </code>
      <div class="markdown pl-6">
        
      </div>
      <h4 class="my-2">Metadata</h4>
      <div class="text-sm">
        <p>The size range is:</p>
        <div
          class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
          <p><strong>hash_map</strong> <code>1..</code></p>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>key: <strong>u32</strong> <code>1..5</code></li>
          <li>value: <strong>string</strong> <code>1..</code></li>
          </ul>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f3</span>:
        <span class="field-type">hash_set&lt;u32&gt;</span>
        <span class="field-id">@3</span>
      </code>
      <div class="markdown pl-6">
        
      </div>
      <h4 class="my-2">Metadata</h4>
      <div class="text-sm">
        <p>The size range is:</p>
        <div
          class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
          <p><strong>hash_set</strong> <code>1..</code></p>
          <ul>
          <li>length: <strong>u64</strong> <code>1..10</code></li>
          <li>element: <strong>u32</strong> <code>1..5</code></li>
          </ul>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f4</span>:
        <span class="field-type">option&lt;u32&gt;</span>
        <span class="field-id">@4</span>
      </code>
      <div class="markdown pl-6">
        
      </div>
      <h4 class="my-2">Metadata</h4>
      <div class="text-sm">
        <p>The size range is:</p>
        <div
          class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
          <p><strong>option</strong> <code>0..6</code></p>
          <ul>
          <li>value: <strong>u32</strong> <code>1..5</code></li>
          </ul>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">f5</span>:
        <span class="field-type">non_zero&lt;u32&gt;</span>
        <span class="field-id">@5</span>
      </code>
      <div class="markdown pl-6">
        
      </div>
      <h4 class="my-2">Metadata</h4>
      <div class="text-sm">
        <p>The size range is:</p>
        <div
          class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
          <p><strong>non_zero</strong> <code>0..6</code></p>
          <ul>
          <li>value: <strong>u32</strong> <code>1..5</code></li>
          </ul>
        </div>
      </div>
    </li>
  </ul>

    </main>
  </body>
</html>

--- types_generic/struct.SampleUnnamed.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>SampleUnnamed - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Struct
    <a href="index.html">types_generic</a>::<span class="name-struct">SampleUnnamed</span>
  </h2>
  <pre class="item-definition my-2">struct SampleUnnamed(vec&lt;u32&gt; @1, hash_map&lt;u32, string&gt; @2, hash_set&lt;u32&gt; @3, option&lt;u32&gt; @4, non_zero&lt;u32&gt; @5)
</pre>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Metadata</h3>
  <div class="pl-6 mt-2">
    <p>The next free ID is <code class="font-bold">6</code></p>
  </div>
</div>
<div class="section">
  <h3>Fields</h3>
  <ul>
    <li class="field-definition">
      <code>
        <span class="field-name">0</span>:
        <span class="field-type">vec&lt;u32&gt;</span>
        <span class="field-id">@1</span>
      </code>
    </li>
    <h4 class="my-2">Metadata</h4>
    <div class="text-sm">
      <p>The size range is:</p>
      <div
        class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
        <p><strong>vec</strong> <code>1..</code></p>
        <ul>
        <li>length: <strong>u64</strong> <code>1..10</code></li>
        <li>element: <strong>u32</strong> <code>1..5</code></li>
        </ul>
      </div>
    </div>
    <li class="field-definition">
      <code>
        <span class="field-name">1</span>:
        <span class="field-type">hash_map&lt;u32, string&gt;</span>
        <span class="field-id">@2</span>
      </code>
    </li>
    <h4 class="my-2">Metadata</h4>
    <div class="text-sm">
      <p>The size range is:</p>
      <div
        class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
        <p><strong>hash_map</strong> <code>1..</code></p>
        <ul>
        <li>length: <strong>u64</strong> <code>1..10</code></li>
        <li>key: <strong>u32</strong> <code>1..5</code></li>
        <li>value: <strong>string</strong> <code>1..</code></li>
        </ul>
      </div>
    </div>
    <li class="field-definition">
      <code>
        <span class="field-name">2</span>:
        <span class="field-type">hash_set&lt;u32&gt;</span>
        <span class="field-id">@3</span>
      </code>
    </li>
    <h4 class="my-2">Metadata</h4>
    <div class="text-sm">
      <p>The size range is:</p>
      <div
        class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
        <p><strong>hash_set</strong> <code>1..</code></p>
        <ul>
        <li>length: <strong>u64</strong> <code>1..10</code></li>
        <li>element: <strong>u32</strong> <code>1..5</code></li>
        </ul>
      </div>
    </div>
    <li class="field-definition">
      <code>
        <span class="field-name">3</span>:
        <span class="field-type">option&lt;u32&gt;</span>
        <span class="field-id">@4</span>
      </code>
    </li>
    <h4 class="my-2">Metadata</h4>
    <div class="text-sm">
      <p>The size range is:</p>
      <div
        class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
        <p><strong>option</strong> <code>0..6</code></p>
        <ul>
        <li>value: <strong>u32</strong> <code>1..5</code></li>
        </ul>
      </div>
    </div>
    <li class="field-definition">
      <code>
        <span class="field-name">4</span>:
        <span class="field-type">non_zero&lt;u32&gt;</span>
        <span class="field-id">@5</span>
      </code>
    </li>
    <h4 class="my-2">Metadata</h4>
    <div class="text-sm">
      <p>The size range is:</p>
      <div
        class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
        <p><strong>non_zero</strong> <code>0..6</code></p>
        <ul>
        <li>value: <strong>u32</strong> <code>1..5</code></li>
        </ul>
      </div>
    </div>
  </ul>

    </main>
  </body>
</html>
